spacing and Insight profile image issues

--- a/app/assets/styles/modules/_academicProgram.scss
+++ b/app/assets/styles/modules/_academicProgram.scss
@@ -168,10 +168,10 @@
 	.why-athena {
 
 		.testimonials {
-			position: relative; 
-			top:0;
-			padding-top:110px;
-			padding-bottom: 20px;
+			position: relative;
+			top: 0;
+			margin-top: 110px;
+			margin-bottom: 20px;
 			.shawdow-effect {
 				h1 {
 					margin-top: 0;
